--- a/index.css
+++ b/index.css
@@ -35,3 +35,41 @@ body {
 .left {
     padding-top: 50px;
 }
+
+
+@media (max-width:320px) {
+
+    .container {
+        width: 70%;
+        background-color: skyblue;
+        padding: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        /* justify-content: space-between; */
+        margin: 80px auto;
+        border-radius: 50px;
+
+        .left {
+            width: 100%;
+        }
+
+        input {
+            width: 100%;
+            margin-bottom: 10px;
+        }
+
+        .right {
+            margin-top: 15px;
+        }
+    }
+
+    .centre {
+        color: orangered;
+        font-size: 2rem;
+    }
+
+    .left {
+        padding-top: 25px;
+
+    }
+}
